unpackaged/main/default/objects/Project__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to default Project in the &apos;Create Item&apos; Utility Bar</inlineHelpText>
    <label>Current?</label>
    <type>Checkbox</type>
</CustomField>