unpackaged/main/default/objects/Project__c/fields/Number_of_Active_Phases__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Active_Phases__c</fullName>
        <label>Number of Active Phases</label>
        <summaryFilterItems>
            <field>Phase__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Phase__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>