unpackaged/main/default/objects/Project__c/fields/Project_Mailbox__c.field-meta.xml
<CustomField>
        <fullName>Project_Mailbox__c</fullName>
        <inlineHelpText>Use for notification purposes</inlineHelpText>
        <label>Project Mailbox</label>
        <type>Email</type>
    </CustomField>