unpackaged/main/default/objects/Project__c/validationRules/Active_Phase_Required.validationRule-meta.xml
<ValidationRule>
        <fullName>Active_Phase_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Active__c,
Number_of_Active_Phases__c = 0
)</errorConditionFormula>
        <errorMessage>Please ensure that you have at least one active Phase related to this Project before activating.</errorMessage>
    </ValidationRule>