unpackaged/main/default/objects/Project__c/listViews/All_Active_Projects.listView-meta.xml
<ListView>
        <fullName>All_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Projects</label>
    </ListView>