unpackaged/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </ListView>